--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "mathcomp"]
 	path = mathcomp
 	url = git@github.com:jscoq/addon-mathcomp
-	branch = mathcomp-1.10.0
+	branch = mathcomp-1.12.0
 [submodule "elpi"]
 	path = elpi
     url = git@github.com:jscoq/addon-elpi.git
-    branch = elpi-1.11-8.12
+    branch = elpi-1.9.7-8.13
 [submodule "equations"]
 	path = equations
     url = git@github.com:jscoq/addon-equations.git
-    branch = equations-1.2.3-8.12
+    branch = equations-1.2.4-8.13
 [submodule "extlib"]
 	path = extlib
     url = git@github.com:jscoq/addon-extlib.git
@@ -17,15 +17,15 @@
 [submodule "simpleio"]
 	path = simpleio
     url = git@github.com:jscoq/addon-simpleio.git
-    branch = simpleio-1.3.0
+    branch = simpleio-1.5.0-8.13
 [submodule "quickchick"]
 	path = quickchick
     url = git@github.com:jscoq/addon-quickchick.git
-    branch = v8.12
+    branch = quickchick-1.5.0-8.13
 [submodule "software-foundations"]
 	path = software-foundations
     url = git@github.com:jscoq/addon-software-foundations
-    branch = master
+    branch = jscoq
 [submodule "hahn"]
 	path = hahn
     url = git@github.com:jscoq/addon-hahn.git
@@ -33,7 +33,7 @@
 [submodule "paco"]
 	path = paco
 	url = git@github.com:jscoq/addon-paco.git
-    branch = paco-4.0.0
+    branch = paco-4.1.1-8.13
 [submodule "snu-sflib"]
 	path = snu-sflib
     url = git@github.com:jscoq/addon-snu-sflib.git
@@ -41,7 +41,7 @@
 [submodule "promising"]
 	path = promising
     url = git@github.com:jscoq/addon-promising.git
-    branch = master
+    branch = 8.13
 [submodule "htt"]
 	path = htt
     url = git@github.com:jscoq/addon-htt.git
